# Gauche-text-kakasi

./: .gitignore  AUTHORS  ChangeLog  DIST  Makefile.in  README.eucjp  README.utf8  configure  configure.ac  configure.in  kakasi-lib.scm  kakasi.c  kakasilib.stub  package.scm  test.scm
.github/workflows/: main.yml
text/: kakasi.scm
