dnl
dnl Configuring gauche-kakasi
dnl  process this file with "autoconf -I `gauche-config --ac`" to
dnl  generate 'configure'.
dnl $Id: configure.in,v 1.3 2004-07-26 02:48:36 shirok Exp $
dnl

AC_PREREQ(2.54)
AC_INIT(Gauche-kakasi, 0.1, shiro@acm.org)
dnl If you want to use the system name (OS, architecture, etc) in the
dnl configure, uncomment the following line.  In such a case, you need
dnl to copy config.guess and config.sub from automake distribution.
AC_CANONICAL_SYSTEM

dnl Sets several Gauche-specific parameters.
AC_GAUCHE_INIT_EXT

# options
AC_ARG_WITH(kakasi, [  --with-kakasi=PATH:      Use KAKASI library installed under PATH.
], [
  case $with_glut in
    no|yes);;
    *)   KAKASI_INCDIR="-I$with_kakasi/include";
         KAKASI_LIBDIR="-L$with_kakasi/lib";;
  esac
])
AC_SUBST(KAKASI_INCDIR)
AC_SUBST(KAKASI_LIBDIR)

dnl Sets the default value of INSTALL_TYPE macro.
dnl You can set it either 'site' or 'sys'.  Usually, user-provided
dnl extensions are installed as 'site' category.
AC_GAUCHE_INSTALL_TYPE(site)

dnl Get compiler parameters which Gauche has been compiled with.
dnl Do not use AC_PROG_CC.  You need to compile and link with the
dnl same programs as gosh.
AC_GAUCHE_CC
AC_GAUCHE_FLAGS

dnl Check for other programs.
dnl Add your macro calls to check existence of programs, if you have any.

dnl Check for libraries
dnl Add your macro calls to check required libraries, if you have any.

dnl Set LDFLAGS to generate dlopen-able extension.
dnl This should come after all tests, or the tests that does link will fail.
AC_GAUCHE_FIX_LIBS

dnl Output
AC_GAUCHE_MAKE_GPD
echo $PACKAGE_VERSION > VERSION
AC_OUTPUT(Makefile)
